labs/meshtraffic-resilience/reviews-dr-2.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews-dr
spec:
  host: reviews
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 4
      http:
        http1MaxPendingRequests: 4
        maxRequestsPerConnection: 4
